src/app/home/components/ins-shelf/ins-shelf.component.scss
.container{
  .table-container {
  overflow: auto;
    margin: 0 10px 30px 10px;
}

.table {
  margin: 0;
  width: 90%;
  td {
    font-size: 12px;
  }
}
.video1 {
  padding: 0px 10px 10px 10px;
  height: 302px;
  margin: 0 0 5px 0;
}
.text {
  color: darkblue;
  font-weight: bold;
  margin-top:30px;
}
.header {
  // padding-left:10px;
  font-weight: bold;
  padding-top: 10px;
  margin-bottom: -2px;
  padding-left: 10px;
}
.shelftext {
  padding-left: 10px;
  padding-top: 20px;
}
.tablemargin {
  margin-top: 5px;
margin-bottom: 20px;
margin-right: -18px;
margin-left: -19px;
}
th {
  background-color: #efefef;
  border-bottom-width: 1px;
}
.tableheader,
.tabledata {
  text-align: center;
  font-size: 14px
}
// th{
//     background-color: #dee2e6;
//     border:1px solid black;
//     border-bottom: 1px solid red;
// }
// td{
//     border:1px solid black;
// }
.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  // margin-top: 20px;
  // margin-bottom: 0px;
}
.horizon {
  margin-left: 10px;
  margin-right: 10px;
}
.pull-right{
  margin-top: -25px;
  background: darkblue;
}
}

